--- a/css/style.css
+++ b/css/style.css
@@ -701,6 +701,8 @@ margin-left: 300px;
 	color: white;
 	margin-right: 80px;
 	margin-left: 10px;
+	padding-left: 0px;
+	padding-right: 90px;
 }
 
 .title-explain
