more changes made from feedback

--- a/css/blog.css
+++ b/css/blog.css
@@ -30,8 +30,8 @@ a{
 }
 .card {
     display: grid;
-    grid-template-columns: 300px;
-    grid-template-rows: 210px 210px 80px;
+    grid-template-columns: 200px;
+    grid-template-rows: 200px 200px 70px;
     grid-template-areas: "image" "text" "stats";
   
     border-radius: 18px;
@@ -43,6 +43,7 @@ a{
     transition: 0.5s ease;
     cursor: pointer;
     margin:30px;
+    margin-left: 0px;
   }
   .card-image {
     grid-area: image;
@@ -57,7 +58,7 @@ a{
     margin: 25px;
   }
   .card-text .date {
-    color: rgb(255, 7, 110);
+    color: #785F37;
     font-size:13px;
   }
   .card-text p {
@@ -68,6 +69,7 @@ a{
   .card-text h2 {
     margin-top:0px;
     font-size:28px;
+    color: black;
   }
   .card-stats {
     grid-area: stats; 
@@ -76,7 +78,7 @@ a{
     grid-template-rows: 1fr;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
-    background: rgb(255, 7, 110);
+    background: #785F37;
     margin-top: 300px;
     
 
@@ -90,8 +92,7 @@ a{
     color: white;
   }
   .card-stats .border {
-    border-left: 1px solid rgb(172, 26, 87);
-    border-right: 1px solid rgb(172, 26, 87);
+    border-right: 1px solid #785F37;
   }
   .card-stats .value{
     font-size:22px;
@@ -116,14 +117,13 @@ a{
     background-size: cover;
   }
   .card-text.card2 .date {
-    color: rgb(255, 77, 7);
+    color: #785F37;
   }
   .card-stats.card2 .border {
-    border-left: 1px solid rgb(185, 67, 20);
-    border-right: 1px solid rgb(185, 67, 20);
+    border-right: 1px solid #785F37;
   }
   .card-stats.card2 {
-    background: rgb(255, 77, 7);
+    background:#785F37;
   }
   /*card3*/
   .card-image.card3 {
@@ -131,12 +131,11 @@ a{
     background-size: cover;
   }
   .card-text.card3 .date {
-    color: rgb(0, 189, 63);
+    color: #785F37;
   }
   .card-stats.card3 .border {
-    border-left: 1px solid rgb(14, 122, 50);
-    border-right: 1px solid rgb(14, 122, 50);
+    border-right: 1px solid #785F37;
   }
   .card-stats.card3 {
-    background: rgb(0, 189, 63);
+    background: #785F37;
   }
