--- a/css/responsive.css
+++ b/css/responsive.css
@@ -182,12 +182,13 @@ position: absolute;
       
 
     } 
-    .nav_sections li{
+    .nav-sections li{
       position: fixed;
       text-align: center;
       top:50px;
       left: -125%;
       margin-left: 0px; 
+      display: none;
       
     transition: all 1s;
       
@@ -209,7 +210,7 @@ position: absolute;
       font-weight: 700;
     }
 
-    .about_box{
+    .about-box{
       background:rgba(255, 255, 255, 0);
       border-radius: 20px;
       padding: 50px;
