--- a/css/style.css
+++ b/css/style.css
@@ -751,6 +751,16 @@ margin-left: 300px;
 	margin-left: 10px;
 }
 
+.data-text{
+	color: white;
+	margin-left: 10px;
+	padding-left: 0px;
+	padding-right: 90px;
+	margin-right: 80px;
+
+
+}
+
 
 
 /********* Blog section ********/
