--- a/css/styles-exam-data.css
+++ b/css/styles-exam-data.css
@@ -1,7 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);
 /*
-  Copyright (c) 2012 Julian Garnier
-  Licensed under the MIT license
+  credits to  Julian Garnier
 */
 /* html{
   border: 0;
@@ -48,12 +47,12 @@ margin-bottom: 300px;
 nav ul li{
   position: relative;
   display: inline-block;
-  padding-top: 10px;
+  padding-top: 15px;
 
 }
 
 nav ul li a{
-	font-size: 25px;
+	font-size: 27px;
 	text-decoration: none;
 	color: white;
   
@@ -109,12 +108,28 @@ nav li{
 	
 }
 .logo p{
-margin-top: 10px;
+margin-top: 20px;
+}
+
+footer{
+	padding: 15px 0;
+	text-align: center;
+	color: #fff;
+	background:#785F37;
+  position: relative;
+margin-top: 600px;
+z-index: 9999;
+width: 110%;
+margin-left: -15px;
+}
+
+footer p{
+  font-size: 20px;
 }
 
 
-ol, ul {
-  list-style: none; }
+/* ol, ul {
+  list-style: none; } */
 
 blockquote, q {
   quotes: none; }
@@ -133,7 +148,7 @@ table {
 
 body {
   font-size: 10px;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Playfair Display', serif;
   font-weight: 300;
   background-color: #08090A; }
 
@@ -1253,7 +1268,24 @@ h1 {
   font-weight: 600;
   font-size: 14px;
   text-align: center;
-  color: rgba(255, 255, 255, 0.8); }
+  color: white }
+
+  .solar-title{
+    color: white;
+    font-weight: 600;
+    font-size: 30px;
+
+
+  }
+
+  h2{
+    width: 100%;
+    font-weight: 600;
+    font-size: 18px;
+    text-align: center;
+    color: gray;
+    margin-left: 60px;
+  }
 
 #navbar, #controls, #data {
   background: rgba(0, 0, 0, 0.4); }
@@ -1536,10 +1568,13 @@ body {
 /* --------------------------------------------------------------------------- responsive styles */
 @media screen and (max-width: 299px) {
   #universe {
-    font-size: 20%; } }
+    font-size: 20%; } 
+  
+   }
 @media screen and (min-width: 300px) {
   #universe {
-    font-size: 24%; } }
+    font-size: 24%; } 
+   }
 @media screen and (min-width: 500px) {
   #universe {
     font-size: 36%; } }
@@ -1548,7 +1583,9 @@ body {
     font-size: 44%; } }
 @media screen and (min-width: 760px) {
   #universe {
-    font-size: 58%; } }
+    font-size: 58%; }
+    
+  }
 @media screen and (min-width: 1000px) {
   #universe {
     font-size: 73%; }
@@ -1591,3 +1628,93 @@ body {
 @media screen and (min-width: 1600px) {
   .zoom-close .scale-d #solar-system {
     margin-left: -120%; } }
+
+    @media (max-width: 764px)
+{
+  .burger-button{
+    display: block;
+    padding: 30px 30px;
+    color: white;
+    margin-top: -40px;
+    margin-right: -30px;
+  } 
+
+
+  nav ul{
+    position: fixed;
+    width: 100%;
+    background-color: rgb(27, 27, 27);
+    height: 100%;
+    text-align: center;
+    top:68px;
+    margin-left: 0px; 
+  left: -110%;
+  transition: all 1s;
+  }
+
+  
+ nav ul li{
+   display: block;
+   padding: 30px 30px;
+ }  
+
+ nav ul li a {
+   font-size: 25px;
+   text-transform: uppercase;
+   margin-left: -90px;
+ }
+
+ #check:checked  ~ ul {
+   left:0;
+
+ }
+
+  .logo p{
+    margin-left: -23px;
+  }
+}
+
+@media (max-width: 1200px)
+{
+  .burger-button{
+    display: block;
+    padding: 30px 30px;
+    color: white;
+    margin-top: -40px;
+    margin-right: -30px;
+  } 
+
+
+  nav ul{
+    position: fixed;
+    width: 100%;
+    background-color: rgb(27, 27, 27);
+    height: 100%;
+    text-align: center;
+    top:68px;
+    margin-left: 0px; 
+  left: -110%;
+  transition: all 1s;
+  }
+
+  
+ nav ul li{
+   display: block;
+   padding: 30px 30px;
+ }  
+
+ nav ul li a {
+   font-size: 25px;
+   text-transform: uppercase;
+   margin-left: -90px;
+ }
+
+ #check:checked  ~ ul {
+   left:0;
+
+ }
+
+  .logo p{
+    margin-left: -23px;
+  }
+}
