--- a/DataArt/styles-exam-data.css
+++ b/DataArt/styles-exam-data.css
@@ -2,16 +2,6 @@
 /*
   credits to  Julian Garnier
 */
-/* html{
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-  margin: 0;
-  padding: 0; } */
-
-/* article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-  display: block; } */
 
 body {
   line-height: 1; 
@@ -126,6 +116,81 @@ margin-left: -15px;
 footer p{
   font-size: 20px;
 }
+
+/* .link-examdata{
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 20px;
+  margin-left: 700px;
+margin-top: 300px;
+z-index: 99;
+
+
+} */
+
+
+#examlink-data{
+  z-index: 99;
+  position: absolute;
+  margin-top: -25px;
+  font-size: 18px;
+
+}
+
+#examlink-data a{
+  color: rgba(255, 255, 255, 0.6);
+
+
+}
+
+#examlink-data a:hover{
+  color: white;
+  
+
+
+}
+
+
+
+#navbar {
+  z-index: 99;
+  position: absolute;
+  margin-top: -100px;
+  left: 0;
+  padding: 16px;
+  width: 100%;
+  height: 48px; }
+
+#navbar a, #data a, #controls label {
+  color: rgba(255, 255, 255, 0.6);
+  display: block;
+  position: relative;
+  text-decoration: none; 
+}
+
+
+#navbar a:hover, #data a:hover, #controls label:hover, #examlink-data a:hover {
+  color: #FFF; }
+
+#data a.active {
+  color: #0CF; }
+
+
+
+#navbar a {
+  position: absolute;
+  top: 0;
+  height: 48px;
+  padding: 16px;
+  font-size: 14px; }
+
+.link-examdata a{
+  text-decoration: underline;
+cursor: pointer;
+
+}
+
+
+
 
 
 /* ol, ul {
@@ -1268,12 +1333,15 @@ h1 {
   font-weight: 600;
   font-size: 14px;
   text-align: center;
-  color: white }
+  color: white ;
+margin-bottom: 30px;
+}
 
   .solar-title{
     color: white;
     font-weight: 600;
     font-size: 30px;
+    margin-left: 70px;
 
 
   }
@@ -1283,7 +1351,7 @@ h1 {
     font-weight: 600;
     font-size: 18px;
     text-align: center;
-    color: gray;
+    color: white;
     margin-left: 60px;
   }
 
@@ -1312,6 +1380,8 @@ h1 {
 
 #data a.active {
   color: #0CF; }
+
+
 
 #navbar a {
   position: absolute;
@@ -1672,6 +1742,33 @@ body {
   .logo p{
     margin-left: -23px;
   }
+
+  .solar-title{
+    font-size: 20px;
+    margin-top: 30px;
+    margin-left: -30px;
+  }
+
+  .solar-subtitle h1{
+
+
+  }
+
+  #navbar h2{
+    margin-left: -10px;
+
+  }
+
+  #examlink-data {
+    margin-top: -85px;
+    font-size: 14px;
+  }
+  #examlink-data a{
+
+    margin-left: -110px;
+
+
+  }
 }
 
 @media (max-width: 1200px)
@@ -1717,4 +1814,24 @@ body {
   .logo p{
     margin-left: -23px;
   }
+
+  .solar-title{
+    font-size: 20px;
+    margin-top: 50px;
+    margin-left: -8px;
+  }
+
+  .solar-subtitle{
+    font-size: 15px;
+    margin-left: -8px;
+
+
+  }
+
+  #examlink-data {
+    margin-top: -85px;
+    margin-left: 255px;
+    font-size: 14px;
+  }
+  
 }
