--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,92 +1,4 @@
 
-/* @media screen and (max-width: 800px){
-	.header{
-     padding: 15px 0; 
-    }
-  .header li{
-     font-size: 15px;
-    }
-	.logo{ 
-    width: 100px; display: block; 
-  }
-	.banner{
-     padding-top: 80px; 
-    }
-  .banner h1{
-     font-size: 50px; 
-    }
-  .banner p{
-    
-    font-size: 30px; }	
-	
-  .about_box{
-  	margin-right: 100px;
-    padding-left: -0px;
-    padding-right: 0px;
-
-  }
-
-  .about_box p{
-  	font-size: 15px;
-
-  }
-
-
-  .service_box figure{ 
-    float: none; width: auto; margin:0 0 20px;
-   }
-.text_right{
-  display: none;
-}
-.cards{
-position: absolute;
-	display: grid;
-	
-	grid-template-columns: repeat(2, 300px);
-	grid-gap:  10px;
-	pointer-events: none;
-  padding-left: 230px;
-  margin-top: -90px;
-}
-.service-title{
-  margin-top: -15px;
-}
-  .nav_icon{
-    display: block;
-  
-  }
-  .nav_icon i{
-    float: right;
-    color: white;
-    padding-top: 30px;
-  }
-    
-    
-      .burger-button{
-        display: block;
-
-      } 
-
-    
-    .nav_sections ul{
-      position: fixed;
-      width: 110%;
-      background-color: rgb(194, 192, 192);
-      height: 100%;
-      text-align: center;
-      margin-left: 0px; 
-    left: -120%;
-    transition: all 1s;
-      
-    }
-    #check:checked  ~ ul {
-      left:0;
-  
-    }
-    
-} */
-   
-  
  
 
   @media (max-width: 1200px){
@@ -428,6 +340,68 @@ position: absolute;
       
   
     }
+
+  .blog1-text{
+    font-size: 12px;
+
+    padding-right: 80px;
+    margin-left: 160px;
+  }
+
+  .blog-container h1{
+
+    font-size: 30px;
+    margin-left: -20px;
+  }
+
+  .blog-container h2{
+
+    font-size: 20px;
+    margin-left: -20px;
+    
+
+  }
+
+  .blog-container figure {
+
+   width: 400px;
+   height: 100px;
+   margin-left: 150px;
+  }
+
+  .source-links{
+    font-size: 12px;
+  }
+
+  .blog-post li{
+    color: white;
+  }
+
+  .tree-data img{
+    width: 50px;
+    height: 50px;
+    margin-left: -50px;
+  }
+
+  .blog-post figure{
+    width: 300px;
+    height: 100px;
+    margin-bottom: 400px;
+  }
+
+  .blog-four{
+  }
+
+  .blog-caption{
+    font-size: 10px;
+    padding-left: 200px;
+    padding-right: 200px;
+    margin-left: 60px;
+    margin-right: 60px;
+  }
+  
+
+
     .card-stats .stat {
       padding:10px;
       display: flex;
@@ -456,7 +430,7 @@ position: absolute;
 
 .styleguide-heading{
 
-  font-size: 50px;
+  font-size: 40px;
 
 }
 .style-pic img{
@@ -508,7 +482,7 @@ position: absolute;
 .data-heading{
 	margin-top: -170px;
 	font-weight: 700;
-	font-size: 50px;
+	font-size: 40px;
 	text-align: center;
 	padding-top: 250px;
 }
@@ -629,10 +603,484 @@ margin-left: 300px;
 .datart-explain{
   margin-left: 190px;
 }
+
+.interactive-title{
+margin-left: 25px;
+font-size: 22px;
+margin-top: 100px;
+}
+
+.interactive-narrative{
+
+  font-size: 15px;
+}
   }
   
   
+  @media (max-width: 320px){
+   
+    .burger-button{
+      display: block;
+      padding: 30px 30px;
+      color: white;
+      margin-top: -40px;
+      margin-right: -30px;
+    } 
+  
 
+    nav ul{
+      position: fixed;
+      width: 100%;
+      background-color: rgb(27, 27, 27);
+      height: 100%;
+      text-align: center;
+      top:68px;
+      margin-left: 0px; 
+    left: -110%;
+    transition: all 1s;
+    }
+  
+    
+   nav ul li{
+     display: block;
+     padding: 30px 30px;
+   }  
+
+   nav ul li a {
+     font-size: 15px;
+     text-transform: uppercase;
+     margin-left: -90px;
+   }
+
+   #check:checked  ~ ul {
+     left:0;
+ 
+   }
+
+    .logo p{
+      margin-left: -23px;
+    }
+    .banner{
+      font-size: 20px; 
+      width: 100%;
+     }
+     .banner h1{
+      font-size: 40px;
+      text-transform: uppercase;
+      font-weight: 700;
+      
+    }
+
+    .about-box{
+      background:rgba(255, 255, 255, 0);
+      border-radius: 20px;
+      padding: 40px;
+      width: 25%;
+      height: 50%;
+      margin-left: 570px;
+      margin-top: 200px;
+      margin-bottom: 200px;
+      position: relative;
+      
+      
+    }
+
+    .about-box p{
+font-size: 15px;
+    }
+    .cards-container{
+      position: relative;
+      width: 800px;
+      margin-top: -200px;
+    }
+
+    .cards{
+      position: absolute;
+      /* position: absolute; */
+      display: grid;
+    
+      grid-template-columns: repeat(3, 160px);
+      grid-gap: 1px;
+      pointer-events: none;
+      padding-top: 150px;
+      margin-left: 20px;
+    }
+ 
+    .service-container{
+      position: relative;
+      width: 380px;
+      height: 800px;
+      margin-right: 10px;
+    }
+
+    .service-title {
+      padding-bottom: 100px;
+      margin-left: 10px;
+      font-size: 50px;
+      margin-top: -10px;
+    }
+
+    .service-instruction{
+      margin-left: 50px;
+      white-space: nowrap;
+      font-size: 15px;
+    }
+
+    .picture-content p{
+      font-size: 10px;
+    }
+
+    .picture-content{
+      width: 10%;
+      height: 20%;
+    }
+
+    .container-box{
+
+      width: 300px;
+
+    }
+    .button-hold{
+      margin-left: -146px;
+    }
+
+    #chart{
+
+      margin-left: 50px;
+      width: 3px;
+
+      
+
+    }
+    .contact h2{
+      
+      margin-left: 60px;
+    }
+
+    #tree-map svg.games{
+      max-width: 95%; 
+    width: auto;
+   
+
+    }
+
+    #tree-map{
+      margin-top: -250px;
+    }
+
+    #title{
+      padding-top: 300px;
+      margin-left: -500px ;
+    }
+
+    #description{
+      margin-left: -480px ;
+
+
+    }
+
+    #tree-map svg.movies{
+      max-width: 95%; 
+    width: auto;
+   
+
+    }
+
+    #chart svg{
+      max-width: 101%; 
+    width: auto;
+
+    }
+
+    #chart{
+      max-width: 90%;
+      margin-left: 10px ;
+    }
+
+    /***********Blog*******/
+
+    .blog-title{
+      color: white;
+      margin-left: 85px;
+      font-size: 45px;
+      margin-top: -40px;
+    }
+
+    
+
+    .card {
+      display: grid;
+      grid-template-columns: 350px;
+      grid-template-rows: 100px 100px 100px;
+      grid-template-areas: "image" "text" "stats";
+    
+      border-radius: 20px;
+      background: white;
+      box-shadow: 5px 5px 15px rgba(0,0,0,0.9);
+      font-family: roboto;
+      
+    
+      transition: 0.5s ease;
+      cursor: pointer;
+      margin:10px;
+      margin-left: 1px;
+      margin-bottom: 90px;
+    }
+    .card-image {
+      grid-area: image;
+      background: url("img1.jpg");
+      border-top-left-radius: 15px;
+      border-top-right-radius: 15px;
+      background-size: cover;
+    }
+    
+    .card-text {
+      grid-area: text;
+      margin: 10px;
+
+    }
+    .card-text .date {
+      color: #785F37;
+      font-size:13px;
+    }
+    .card-text p {
+      color: grey;
+      font-size:10px;
+      font-weight: 300;
+      margin-left: 100px;
+      padding-right: 80px;
+    }
+    .card-text h2 {
+      margin-top:0px;
+      font-size:15px;
+      color: black;
+    }
+    .card-stats {
+      grid-area: stats; 
+      display: grid;
+      grid-template-columns: 1fr 1fr ;
+      grid-template-rows: 1fr;
+      border-bottom-left-radius: 15px;
+      border-bottom-right-radius: 15px;
+      background: #785F37;
+      margin-top: 300px;
+      
+  
+    }
+    .card-stats .stat {
+      padding:10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      color: white;
+    }
+
+  
+
+    
+#games, #movies, #jewl{
+
+	margin-bottom: -45px;
+  margin-top: 20px;
+
+}
+
+.interactive-instruct{
+  margin-left: 30px;
+  margin-top: 50px;
+}
+
+
+/*************DESIGN SECTION********/
+
+.styleguide-heading{
+
+  font-size: 40px;
+
+}
+.style-pic img{
+	margin-left: 10px;
+  margin-right: 10px;
+  width: 250px;
+  float: left;
+
+}
+.font-text{
+	color: white;
+  margin-top: 40px;
+	/* float: right; */
+
+	
+}
+.font-intro p{
+	/* padding: 300px 30px; */
+	margin-right: 100px;
+	margin-left: -20px;
+	
+}
+
+.back-image img {
+	width: 250px;
+	height: 200px;
+	float: left;
+}
+
+.back-image{
+	margin-top: 40px;
+	margin-left: 10px;
+
+}
+.jewl-image img{
+	width: 250px;
+	height: 250px;
+	float: left;
+	margin-top: -10px;
+
+	
+}
+.jewl-image{
+	margin-left: 10px;
+
+
+}
+
+.data-heading{
+	margin-top: -170px;
+	font-weight: 700;
+	font-size: 40px;
+	text-align: center;
+	padding-top: 250px;
+}
+
+.data-map{
+	color: white;
+	margin-right: 80px;
+	margin-left: 80px;
+}
+.design-steps{
+	color: white;
+	margin-right: 100px;
+	margin-left: 10px;
+}
+
+.data-img{
+width:250px;
+height: 300px;
+margin-left: 250px;
+padding-left: 50px;
+}
+
+.datavis-img{
+  width:280px;
+height: 300px;
+margin-left: 10px;
+padding-left: 50px;
+
+}
+
+.datavis-caption{
+  margin-left: 70px;
+
+}
+
+.data-caption{
+	color: white;
+	margin-left: 340px;
+}
+
+.data-explain {
+	color: white;
+	
+	padding-left: 0px;
+  margin-right: 10px;
+	margin-left: 80px;
+	
+}
+
+.title-explain
+{
+	color: white;
+	margin-left: 10px;
+	font-weight: 600px;
+	font-size: 30px;
+}
+
+.design-coloumn{
+	flex: 60%;
+	padding: 3px;
+	margin-left: -330px;
+}
+.design-row{
+	display: flex;
+	
+}
+
+.design-coloumn-inter{
+	flex: 33.3%;
+	padding: 5px;
+	margin-left: -350px;
+}
+
+.design-row-inter{
+	display: flex;
+	
+}
+
+.data-set{
+	color: white;
+	margin-left: 10px;
+}
+
+.data-text p{
+	color: white;
+  /* margin-right: 30px; */
+  margin-left: 200px;
+}
+
+.data-meaning{
+
+	color: white;
+  margin-left: 210px;
+  margin-right: 210px;
+
+
+}
+
+.data-art-img img{
+
+  width: 250px;
+	height: 200px;
+	float: left;
+  margin-left: 180px;
+
+}
+
+.data-art-caption{
+margin-right: 300px;	
+margin-left: 300px;
+}
+
+.data-art-two{
+  width: 300px;
+  margin-left: 170px;
+}
+
+.datart-explain{
+  margin-left: 190px;
+}
+
+.interactive-title{
+margin-left: 25px;
+font-size: 22px;
+margin-top: 100px;
+}
+
+.interactive-narrative{
+
+  font-size: 15px;
+}
+  }
 
   
   
